infrastructure/kubernetes/ingress-admin/admin-ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-admin-dashboard
  namespace: ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
spec:
  ingressClassName: traefik-admin
  rules:
    - host: traefika.admin.cluster.local.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-admin
                port:
                  number: 8080
